=== gnome-vfs 2.5.0.1 ===

2003-10-23  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	2.5.0.1 to fix build

2003-10-21  Alexander Larsson  <alexl@redhat.com>

	* schemas/Makefile.am (install-data-local):
	Apparently builddir here is broken for some people.
	But without it distcheck broke. WTF?

=== gnome-vfs 2.5.0 ===

2003-10-20  Alexander Larsson  <alexl@redhat.com>

	* schemas/Makefile.am (install-data-local):
	Fix distcheck
	
2003-10-20  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* configure.in:
	* doc/Makefile.am:
	Use gtk-doc.make
	
	* daemon/Makefile.am:
	* daemon/gnome-vfs-daemon-handle.h:
	* libgnomevfs/Makefile.am:
	* test/Makefile.am:
	Fix distcheck

2003-10-20  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require orbit 2.9.0

2003-10-20  Christophe Fergeau  <teuf@gnome.org>

	* NEWS: updated

2003-10-20  Manuel Clos  <llanero@jazzfree.com>

	* libgnomevfs/gnome-vfs-async-ops.c
	* libgnomevfs/gnome-vfs-async-ops.h
	* libgnomevfs/gnome-vfs-job.c
	* libgnomevfs/gnome-vfs-job.h: added asynchronous seek implementation
	  (gnome_vfs_async_seek)

2003-10-20  Manuel Clos  <llanero@jazzfree.com> 
	
	* modules/ftp-method.c: added seek/tell support
	
2003-10-20  Christophe Fergeau  <teuf@gnome.org>
	
        * libgnomevfs/gnome-vfs-private-utils.c: forgot to take into account
          '\0' when replacing strcpy with memmove. Fixes the panel
          applications menu.

Sun Oct 19 09:30:05 2003  Jonathan Blandford  <jrb@gnome.org>

	* libgnomevfs/gnome-vfs-xfer.c (free_progress): fix typo that
	prevented free_progress from compiling.

2003-10-19  Christophe Fergeau  <teuf@gnome.org>

	* modules/ssh-method.c: removed debugging g_print
	* NEWS: updated

2003-10-19  Christophe Fergeau  <teuf@gnome.org>

	* modules/ssh-method.c: applied slightly modified patch from Mitch
	  <mitch@0bits.com> to fix the method with some ssh servers.

2003-10-18  Christophe Fergeau  <teuf@gnome.org>
