@@ -1,3 +1,9 @@
+2003-10-27  Alexander Larsson  <alexl@redhat.com>
+
+	* daemon/gnome-vfs-async-daemon.c:
+	FreeBSD has a public async_daemon symbol. Avoid collision.
+	Patch from Joe Marcus Clarke <marcus@FreeBSD.org>
+
 === gnome-vfs 2.5.0.1 ===
 
 2003-10-23  Alexander Larsson  <alexl@redhat.com>
